--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
+js-sys = "0.3.61"
+fixedbitset = "0.4.2"
+web-sys = "0.3.61"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
